--- a/task_manager/templates/greet.html
+++ b/task_manager/templates/greet.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Greetings!</title>
-</head>
-<body>
-<h1>Hello, {{ who }}!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+    <div class="container wrapper flex-grow-1" align="center">
+        <h1>Task manager <span class="badge badge-secondary">Project</span></h1>
+    </div>
+{% endblock %}
