add model "task", remake templates, remake "users"(handle exception ProtectedError cause foreignkey)

--- a/statuses/templates/statuses/status_update.html
+++ b/statuses/templates/statuses/status_update.html
@@ -2,6 +2,8 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
+{% block title %}<title>Изменить статус</title>{% endblock %}
+
 {% block content %}
   <div class="container wrapper flex-grow-1">
     <h1 class="my-4">Изменить статус</h1>
