--- a/task_manager/templates/greet.html
+++ b/task_manager/templates/greet.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 
+{% block title %}<title>Главная страница</title>{% endblock %}
+
 {% block content %}
-    <div class="container wrapper flex-grow-1" align="center">
+    <div class="container wrapper flex-grow-1" align="center" style="margin-top: 20px">
         <h1>Task manager <span class="badge badge-secondary">Project</span></h1>
     </div>
 {% endblock %}
