--- a/task_manager/templates/inc/_nav.html
+++ b/task_manager/templates/inc/_nav.html
@@ -1,11 +1,12 @@
 {% load i18n %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {% if user.is_authenticated %}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">{% trans 'Task manager' %}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'users_list' %}">{% trans 'Users' %}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'status_list' %}">{% trans 'Statuses' %}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'task_list' %}">{% trans 'Tasks' %}</a></li>
             </ul>
             <span class="navbar-text">
                 Вы вошли, как {{ user.username }} | <a href="{% url 'logout' %}">{% trans 'Logout' %}</a>
