--- a/tasks/templates/tasks/task_delete.html
+++ b/tasks/templates/tasks/task_delete.html
@@ -2,12 +2,12 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}<title>Удаление пользователя</title>{% endblock %}
+{% block title %}<title>Удаление задачи</title>{% endblock %}
 
 {% block content %}
   <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Удаление пользователя</h1>
-      <p>Вы уверены, что хотите удалить {{ user }}?</p>
+    <h1 class="my-4">Удаление задачи</h1>
+      <p>Вы уверены, что хотите удалить {{ object.name }}?</p>
     <form method="post">
       {% csrf_token %}
       <div class="form-group">
