--- a/tasks/templates/tasks/task_update.html
+++ b/tasks/templates/tasks/task_update.html
@@ -2,11 +2,11 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}<title>Изменение пользователя</title>{% endblock %}
+{% block title %}<title>Изменение задачи</title>{% endblock %}
 
 {% block content %}
   <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Изменение пользователя</h1>
+    <h1 class="my-4">Изменение задачи</h1>
     <form method="post">
       {% csrf_token %}
       {% bootstrap_form form %}
