--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,6 +2,8 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
+{% block title %}<title>Логин</title>{% endblock %}
+
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <h1>Логин</h1>
