--- a/users/templates/users/user_add.html
+++ b/users/templates/users/user_add.html
@@ -2,6 +2,8 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
+{% block title %}<title>Регистрация</title>{% endblock %}
+
 {% block content %}
   <div class="container wrapper flex-grow-1">
     <h1 class="my-4">Регистрация</h1>
