--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,6 +10,10 @@
     {% load bootstrap4 %}
     {% load i18n %}
     {% bootstrap_javascript jquery='full' %}
+      <link rel="stylesheet" href="{% static 'style.css' %}">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
+    rel="stylesheet">
   </head>
 
   <body>
