--- a/task_manager/templates/greet.html
+++ b/task_manager/templates/greet.html
@@ -1,10 +1,50 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load bootstrap4 %}
+{% load i18n %}
 
-{% block title %}<title>Главная страница</title>{% endblock %}
+{% block title %}<title>{% trans 'Main' %}</title> {% endblock %}
 
 {% block content %}
-    <div class="container wrapper flex-grow-1" align="center" style="margin-top: 20px">
-        <h1>Task manager <span class="badge badge-secondary">Project</span></h1>
+
+  <div class="header">
+    <h1>{% trans 'Task manager' %}</h1>
+    <h1>{% trans 'Organize your work the right way' %}</h1>
+
+    <p>{% trans 'It will help you gain concentration, organization and peace.' %}</p>
+  </div>
+  <div class="row1-container">
+    <div class="box box-down cyan">
+      <h2><a style="color: var(--veryDarkBlue);" href="{% url 'task_list' %}">{% trans 'Tasks' %}</a></h2>
+      <p>{% trans "Create tasks so you don't miss out on anything important in your work plan" %}</p>
+      <img src="{% static 'img/task1.png' %}" alt="">
     </div>
+
+    <div class="box red">
+      <h2><a style="color: var(--veryDarkBlue);" href="{% url 'label_list' %}">{% trans 'Labels' %}</a></h2>
+      <p>{% trans 'Group tasks according to different criteria with labels' %}</p>
+      <img src="{% static 'img/label1.png' %}" alt="">
+    </div>
+
+    <div class="box box-down blue">
+      <h2><a style="color: var(--veryDarkBlue);" href="{% url 'users_list' %}">{% trans 'Executors' %}</a></h2>
+      <p>{% trans 'Designate one or more people to be responsible for completing tasks' %}</p>
+      <img src="{% static 'img/executor1.png' %}" alt="">
+    </div>
+  </div>
+  <div class="row2-container">
+    <div class="box orange">
+      <h2><a style="color: var(--veryDarkBlue);" href="{% url 'status_list' %}">{% trans 'Statuses' %}</a></h2>
+      <p>{% trans 'Track the status to know at what stage the task is' %}</p>
+      <img src="{% static 'img/status1.png' %}" alt="">
+    </div>
+  </div>
+  <footer>
+    <p class="attribution">
+      Nurmukhambetov Baurzhan<br>
+      <a href="https://github.com/NNbaur">@Github</a>
+    </p>
+  </footer>
+
+
 {% endblock %}
