--- a/tasks/templates/tasks/task_delete.html
+++ b/tasks/templates/tasks/task_delete.html
@@ -2,16 +2,16 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}<title>Удаление задачи</title>{% endblock %}
+{% block title %}<title>{% trans 'Delete task' %}</title>{% endblock %}
 
 {% block content %}
   <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Удаление задачи</h1>
-      <p>Вы уверены, что хотите удалить {{ object.name }}?</p>
+    <h1 class="my-4">{% trans 'Delete task' %}</h1>
+      <p>{% trans 'Are you sure you want to delete' %} {{ object.name }}?</p>
     <form method="post">
       {% csrf_token %}
       <div class="form-group">
-        <button type="submit" class="btn btn-danger">Да, удалить</button>
+        <button type="submit" class="btn btn-danger">{% trans 'Yes, delete' %}</button>
       </div>
     </form>
   </div>
