--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -2,28 +2,76 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}<title>Задачи</title>{% endblock %}
+{% block title %}<title>{% trans 'Tasks' %}</title>{% endblock %}
 
 {% block content %}
 <div class="container wrapper flex-grow-1">
-    <h1 class="my-4">Задачи</h1>
+    <h1 class="my-4">{% trans 'Tasks' %}</h1>
     <a href="{% url 'task_add' %}">
-        <button class="btn btn-outline-dark" style="margin-bottom: 7px">Создать</button>
+        <button class="btn btn-outline-dark" style="margin-bottom: 7px">{% trans 'Create' %}</button>
     </a>
+
+    <div class="card mb-3">
+        <div class="card-body bg-light">
+            <form class="form-inline center" method="get">
+
+                <div class="form-group"><label for="id_status">{% trans 'Status' %}</label>
+                    <div class="ml-2 mr-3">
+                        <select name="status" class="form-control" title="" id="id_status">
+                        {% for st in filter.form.status %}
+                            {{ st }}
+                        {% endfor %}
+                    </select>
+                    </div>
+                </div>
+
+                <div class="form-group"><label for="id_executor">{% trans 'Executor' %}</label>
+                    <div class="mr-3 ml-2"><select name="executor" class="form-control" title="" id="id_executor">
+                        {% for ex in filter.form.executor %}
+                            {{ ex }}
+                        {% endfor %}
+
+                    </select>
+                    </div>
+                </div>
+
+                <div class="form-group"><label for="id_label">{% trans 'Label' %}</label>
+                    <div class="mr-3 ml-2"><select name="label" class="form-control" title="" id="id_label">
+                        <option value="" selected="">---------</option>
+                        {% for lab in filter.form.label %}
+                            {{ lab }}
+                        {% endfor %}
+                    </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="mr-3">
+                        <div class="form-check"><input type="checkbox" name="self_task" class="form-check-input"
+                                                       id="id_self_task" value="{{ filter.form.self_task.value }}">
+                            <label class="form-check-label" for="id_self_task">{% trans 'Only your tasks' %}</label>
+                        </div>
+                    </div>
+                </div>
+                <input class="btn btn-outline-dark" type="submit" value="{% trans 'Show' %}">
+            </form>
+
+        </div>
+    </div>
     <table class="table table-hover table-striped table-bordered">
         <thead align="center">
         <tr>
             <th>ID</th>
-            <th>Имя</th>
-            <th>Статус</th>
-            <th>Автор</th>
-            <th>Исполнитель</th>
-            <th>Дата создания</th>
+            <th>{% trans 'Name' %}</th>
+            <th>{% trans 'Status' %}</th>
+            <th>{% trans 'Author' %}</th>
+            <th>{% trans 'Executor' %}</th>
+            <th>{% trans 'Created at' %}</th>
             <th></th>
         </tr>
         </thead>
         <tbody>
-        {% for task in task_list %}
+        {% for task in filter.qs %}
         <tr>
             <td align="center">{{ task.pk }}</td>
             <td align="center"><a href="{% url 'task_view' task.pk %}">{{ task.name }}</a></td>
@@ -32,10 +80,10 @@
             <td align="center">{{ task.executor }}</td>
             <td align="center">{{ task.created_at|date:"d.m.Y H:i" }}</td>
             <td align="center"><a href="{% url 'task_update' task.pk %}" style="display: inline-block">
-                <button class="btn btn-outline-secondary btn-sm">Изменить</button>
+                <button class="btn btn-outline-secondary btn-sm">{% trans 'Update' %}</button>
             </a>
                 <a href="{% url 'task_delete' task.pk %}" style="display: inline-block">
-                    <button class="btn btn-outline-secondary btn-sm">Удалить</button>
+                    <button class="btn btn-outline-secondary btn-sm">{% trans 'Delete' %}</button>
                 </a>
             </td>
         </tr>
