add download csv tasks, navbar style overwrite for mobilecdevices

--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -10,6 +10,10 @@
     <a href="{% url 'task_add' %}">
         <button class="btn btn-outline-dark" style="margin-bottom: 7px">{% trans 'Create' %}</button>
     </a>
+    <a href="{% url 'excel_csv' %}">
+        <button class="btn btn-outline-dark" style="margin-bottom: 7px">Скачать</button>
+    </a>
+
 
     <div class="card mb-3">
         <div class="card-body bg-light">
