--- a/task_manager/templates/inc/_nav.html
+++ b/task_manager/templates/inc/_nav.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div style="display: flex;" class="collapse navbar-collapse" id="navbarSupportedContent">
         {% if user.is_authenticated %}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">{% trans 'Task manager' %}</a></li>
